inheriting the views in html
inheriting the views in html

--- a/djangodemo/templates/FirstApp.html
+++ b/djangodemo/templates/FirstApp.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <p>
 <h1>This is first App in html code</h1>
 <!--{{ myvar }}
@@ -13,6 +16,7 @@
 {% endfor %}
 </ul>
 </p>-->
+
 <h1>Cities</h1>
 <table width="100%"  border="1">
     <tr style="background-color:lightgray">
@@ -31,3 +35,4 @@
     {% endfor %}
 
 </table>
+{% endblock %}
